--- a/src/test/java/index10.html
+++ b/src/test/java/index10.html
@@ -75,6 +75,8 @@
     Password:<br>
     <input type="text" name="password">
     <br>
+         <input type="submit" value="Submit">
+</form>
  <form action="http://localhost:8080/user/login" method=post>
     Username:<br>
     <input type="text" name="username">
@@ -84,7 +86,7 @@
     <br>
     <input type="submit" value="Submit">
 </form>
-<input type="submit" value="Submit">
+
     <form action="http://localhost:8080/user/login" method=post>
     Username:<br>
     <input type="text" name="username">
