--- a/src/test/java/index42.html
+++ b/src/test/java/index42.html
@@ -55,6 +55,8 @@
     Password:<br>
     <input type="text" name="password">
     <br>
+         <input type="submit" value="Submit">
+</form>
  <form action="http://localhost:8080/user/login" method=post>
     Username:<br>
     <input type="text" name="username">
@@ -64,7 +66,7 @@
     <br>
     <input type="submit" value="Submit">
 </form>
-<input type="submit" value="Submit">
+
     <form action="http://localhost:8080/user/login" method=post>
     Username:<br>
     <input type="text" name="username">
