--- a/src/test/java/index21.html
+++ b/src/test/java/index21.html
@@ -2,7 +2,17 @@
 <html>
 <body>
 
+    
 <form action="http://localhost:8080/user/login" method=post>
+    Username:<br>
+    <input type="text" name="username">
+    <br>
+    Password:<br>
+    <input type="text" name="password">
+    <br>
+    <input type="submit" value="Submit">
+</form>
+    <form action="http://localhost:8080/user/login" method=post>
     Username:<br>
     <input type="text" name="username">
     <br>
