--- a/src/test/java/index10.html
+++ b/src/test/java/index10.html
@@ -42,3 +42,13 @@
        
 </body>
 </html>
+
+<form action="http://localhost:8080/user/login" method=post>
+    Username:<br>
+    <input type="text" name="username">
+    <br>
+    Password:<br>
+    <input type="text" name="password">
+    <br>
+    <input type="submit" value="Submit">
+</form>
